fix: solve the horizontal scrolling of the layout

--- a/ignite/react_desafios/D01-ToDo-List/src/globals.css
+++ b/ignite/react_desafios/D01-ToDo-List/src/globals.css
@@ -31,6 +31,7 @@ body {
   color: var(--gray-300);
   -webkit-font-smoothing: antialiased;
   font-size: 1.6rem;
+  overflow-x: hidden;
 }
 
 body::after {
